# tesseract_collision_physx

./: CMakeLists.txt  README.md  package.xml
cmake/: tesseract_collision_physx-config.cmake.in
include/tesseract_collision_physx/: physx_discrete_manager.h  tesseract_physx.h  tesseract_physx_scene.h
src/: physx_discrete_manager.cpp  split_simulation.cpp  tesseract_physx_scene.cpp  tesseract_simulation_event_callback.cpp  utils.cpp
tesseract_collision_benchmark/: CMakeLists.txt  package.xml
tesseract_collision_benchmark/data/: .~lock.benchmark_data_v2.ods#  benchmark_data.ods  benchmark_data_v2.ods
tesseract_collision_benchmark/include/tesseract_collision_benchmark/: utils.h
tesseract_collision_benchmark/src/: tesseract_collision_benchmark.cpp  utils.cpp
tesseract_collision_physx/: CMakeLists.txt  README.md  package.xml
tesseract_collision_physx/cmake/: tesseract_collision_physx-config.cmake.in
tesseract_collision_physx/include/tesseract_collision_physx/: physx_collision_object_wrapper.h  physx_discrete_manager.h  tesseract_physx.h  tesseract_physx_scene.h  tesseract_simulation_event_callback.h  tesseract_simulation_filter_callback.h  types.h  utils.h
tesseract_collision_physx/src/: physx_collision_object_wrapper.cpp  physx_discrete_manager.cpp  split_simulation.cpp  tesseract_physx.cpp  tesseract_physx_scene.cpp  tesseract_physx_test.cpp  tesseract_simulation_event_callback.cpp  tesseract_simulation_filter_callback.cpp  test.cpp  utils.cpp
tesseract_collision_physx/test/: CMakeLists.txt  collision_box_box_unit.cpp  collision_box_capsule_unit.cpp  collision_box_cone_unit.cpp  collision_box_sphere_unit.cpp  collision_compound_compound_unit.cpp  collision_large_dataset_unit.cpp  collision_multi_threaded_unit.cpp  collision_octomap_mesh_unit.cpp  collision_octomap_sphere_unit.cpp  collision_sphere_sphere_unit.cpp
test/: CMakeLists.txt  collision_box_box_unit.cpp  collision_box_cylinder_unit.cpp  collision_box_sphere_unit.cpp  collision_clone_unit.cpp  collision_mesh_mesh_unit.cpp  collision_sphere_sphere_unit.cpp
test/benchmarks/: CMakeLists.txt  physx_discrete_benchmarks.cpp
