<?xml version="1.0"?>
<package format="2">
  <name>tesseract_collision_physx</name>
  <version>0.1.0</version>
  <description>The Tesseract Collision PhysX Implementation package</description>
  <maintainer email="Levi.Armstrong@swri.org">Levi Armstrong</maintainer>
  <license>LGPLv3</license>
  <author>Levi Armstrong</author>

  <!-- Following recommendations of REP 136 -->
  <exec_depend>catkin</exec_depend>
  <buildtool_depend>cmake</buildtool_depend>

  <depend>tesseract_geometry</depend>
  <depend>tesseract_common</depend>
  <depend>tesseract_collision</depend>

  <build_depend>eigen</build_depend>
  <build_export_depend>eigen</build_export_depend>
  <depend>libconsole-bridge-dev</depend>

  <test_depend>gtest</test_depend>
  <test_depend>tesseract_scene_graph</test_depend>

  <export>
    <build_type>cmake</build_type>
  </export>
</package>
