<?xml version="1.0"?>
<package format="2">
  <name>tesseract_collision_benchmark</name>
  <version>0.1.0</version>
  <description>The Tesseract Collision Benchmarking package</description>
  <maintainer email="Levi.Armstrong@swri.org">Levi Armstrong</maintainer>
  <license>BSD</license>
  <license>LGPLv3</license>
  <author>Levi Armstrong</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>tesseract_urdf</depend>
  <depend>tesseract_environment</depend>
  <depend>tesseract_collision</depend>
  <depend>tesseract_collision_physx</depend>
  <depend>tesseract_rosutils</depend>
  <depend>moveit_core</depend>
  <depend>moveit_ros_planning_interface</depend>
  <depend>random_numbers</depend>
  <depend>libconsole-bridge-dev</depend>

  <test_depend>gtest</test_depend>
  <test_depend>tesseract_scene_graph</test_depend>

  <export>
  </export>
</package>
